<resources>
    <string name="app_name">StoryApp</string>
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_hint">Belum Punya Akun?</string>
    <string name="register">Daftar</string>
    <string name="btn_login">Masuk</string>
    <string name="register_title">Register</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>
    <string name="description_hint">Masukkan Deskripsi Gambar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Coba lagi</string>
    <string name="location">Location</string>
</resources>